<resources>
    <string name="txt_app_name">MNotepad</string>
    <string name="txt_button_add_note">Button to Add Note</string>
    <string name="txt_button_search_note">Button to Search Note</string>
    <string name="txt_button_sort_note">Button to Sort Note</string>
    <string name="txt_button_for_more">Button for More</string>
    <string name="txt_button_update_category">Button to Update Category</string>
    <string name="txt_button_delete_category">Button to Delete Category</string>
    <string name="txt_button_select_all">Button to Select All</string>
    <string name="txt_button_delete_all">Button to Delete All</string>

    <string name="txt_notes_title">Notes</string>
    <string name="txt_uncategorized_title">Uncategorized</string>
    <string name="txt_edit_categories_title">Edit Categories</string>
    <string name="txt_trash_title">Trash</string>
    <string name="txt_rate_title">Rate the app</string>
    <string name="txt_help_title">Help</string>
    <string name="txt_users_title">Users</string>
    <string name="txt_settings_title">Settings</string>
    <string name="txt_theme_title">Theme</string>

    <string name="txt_hint_enter_content">Enter content…</string>
    <string name="txt_hint_enter_title">Enter title…</string>
    <string name="txt_hint_enter_category">Enter category…</string>
    <string name="txt_hint_search">Search…</string>
    <string name="txt_hint_password">Password…</string>
    <string name="txt_hint_current_password">Current password…</string>
    <string name="txt_hint_new_password">New password</string>
    <string name="txt_hint_repeat_new_password">Repeat new password</string>
    <string name="txt_hint_enter_email">Enter email address</string>
    <string name="txt_checkbox_hide_password">Hide password</string>

    <string name="txt_option_sort_upper">SORT</string>
    <string name="txt_option_more_upper">MORE</string>
    <string name="txt_option_save_upper">SAVE</string>
    <string name="txt_option_undo_upper">UNDO</string>
    <string name="txt_option_add_upper">ADD</string>
    <string name="txt_option_add_plus_upper">+ ADD ITEM</string>
    <string name="txt_option_allow_edit_upper">ALLOW EDIT</string>
    <string name="txt_option_ok_upper">OK</string>
    <string name="txt_option_all_upper">ALL</string>
    <string name="txt_option_unselect_all_upper">UNSELECT</string>
    <string name="txt_option_search">Search</string>
    <string name="txt_option_delete">Delete</string>
    <string name="txt_option_categorize">Categorize</string>
    <string name="txt_option_redo">Redo</string>
    <string name="txt_option_import_file">Import</string>
    <string name="txt_option_export_file">Export</string>
    <string name="txt_option_read_only">Read Only</string>
    <string name="txt_option_share">Share</string>
    <string name="txt_option_undelete_all">Undelete All</string>
    <string name="txt_option_delete_all">Delete All</string>
    <string name="txt_option_export_all">Export All</string>
    <string name="txt_option_colorize">Colorize</string>
    <string name="txt_option_print">Print</string>
    <string name="txt_option_show_info">Show Info</string>
    <string name="txt_option_export_notes_to_text_files">Export notes to text files</string>
    <string name="txt_option_import_text_files">Import Text Files</string>
    <string name="txt_option_covert_to_checklist">Covert to Checklist</string>
    <string name="txt_option_add_widget">Add widget</string>
    <string name="txt_option_password_settings">Password Settings</string>
    <string name="txt_option_select_all_notes">Select all notes</string>
    <string name="txt_option_unselect_all_notes">Unselect all notes</string>
    <string name="txt_option_set_password">Set password</string>
    <string name="txt_option_unlock_time">Unlock time</string>
    <string name="txt_option_remove_password">Remove password</string>

    <string name="txt_activity_note_widget_title">Select a note or create a new one (with the \'+\' button):</string>
    <string name="txt_activity_help_title">Frequently asked questions</string>
    <string name="txt_activity_lock_title">Enter password to unlock the app</string>

    <string name="txt_subtext_change_color_theme">Changes color theme of visible elements</string>
    <string name="txt_subtext_set_password">Sets password needed to unlock the app</string>
    <string name="txt_subtext_remove_password">App will no longer require password to unlock</string>
    <string name="txt_subtext_unlock_time">During this time the app won\'t ask for the password after unlocking the app</string>
    <string name="txt_subtext_new_password">Enter new password two times. Leave empty to delete the current password.</string>

    <string name="txt_dialog_remove_password_title">Enter current password</string>
    <string name="txt_dialog_enter_current_password_title">Enter current password</string>
    <string name="txt_dialog_recovery_email_title">Password recovery email address</string>

    <string name="txt_error_invalid_password">Invalid Password</string>

    <string name="nav_close">Close</string>
    <string name="nav_open">Open</string>
    <string name="txt_plus">+</string>
    <string name="txt_gift_title">Lucky Wheel</string>
</resources>