<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.SettingsActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ToolbarTheme"
        app:navigationIcon="@drawable/ic_back"
        app:navigationIconTint="?attr/colorOnPrimary"
        app:title="Settings" />

    <LinearLayout
        android:id="@+id/btnTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp"
        tools:ignore="UselessParent">

        <TextView
            android:textColor="?attr/textFillColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_theme_title"
            android:textStyle="bold"
            android:textSize="16sp"
            tools:ignore="PrivateResource" />

        <TextView
            android:textColor="?attr/textFillColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_subtext_change_color_theme"
            tools:ignore="PrivateResource" />

    </LinearLayout>

    <TextView
        android:textColor="?attr/textFillColor"
        android:id="@+id/btnPasswordSetting"
        android:layout_marginHorizontal="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="@string/txt_option_password_settings"
        tools:ignore="PrivateResource" />

</LinearLayout>